# bookstore-docker-demo

./: .dockerignore  .env_example  .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
books/: models.py
books/migrations/: 0001_initial.py
bookstore_project/: asgi.py  settings.py  urls.py  wsgi.py
pages/: tests.py
static/css/: base.css
static/js/: base.js
templates/: _base.html  home.html  signup.html
templates/account/: email_confirm.html  logout.html  signup.html
templates/account/email/: email_confirmation_subject.txt
templates/books/: book_list.html
templates/registration/: login.html
users/: admin.py  tests.py  views.py
users/migrations/: 0001_initial.py
