[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Online BookStore Demo"
authors = ["Nicola Erario <nicola.erario@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
psycopg2-binary = "^2.8.4"
django-crispy-forms = "^1.8.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
